# AI-PDF-Chat-Application

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  pdfs.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/middleware/: logging.py
backend/app/rag/: chain.py  chunker.py  embedder.py  loader.py  pipeline.py  vectorstore.py
backend/app/schemas/: auth.py  chat.py  pdf.py
backend/app/services/: auth_service.py  chat_service.py  pdf_service.py
backend/scripts/: README.md  eval_rag.py  sample_test_cases.json
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_config.py  test_db.py  test_pdfs.py  test_pipeline.py  test_rag_primitives.py  test_security.py
docs/: ARCHITECTURE.md  INTERVIEW_QA.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-05-19-ai-pdf-chat-mvp.md
docs/superpowers/specs/: 2026-05-19-ai-pdf-chat-design.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useChatStream.tsx  useDarkMode.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: AppPage.tsx  LoginPage.tsx
frontend/src/services/: api.tsx  auth.tsx  chat.tsx  pdfs.tsx
(+19 files in other folders)
