[project]
name = "ai-pdf-chat-backend"
version = "0.1.0"
description = "AI PDF Chat backend"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "SQLAlchemy==2.0.35",
  "alembic==1.13.3",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "email-validator==2.2.0",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.12",
  "pypdf==5.0.1",
  "langchain==0.3.3",
  "langchain-openai==0.2.2",
  "langchain-google-genai==2.0.1",
  "langchain-groq==0.2.0",
  "langchain-community==0.3.2",
  "chromadb==0.5.13",
  "openai==1.51.2",
  "httpx==0.27.2",
  "sse-starlette==2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff==0.6.9",
  "reportlab==4.2.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
